# ifrs16kit

./: .coverage  MANIFEST.in  README.md  TESTING.md
.github/workflows/: python-app.yml  python-publish.yml
ifrs16kit/: LICENSE  README.md  TESTING.md  VIGNETTE.md  pyproject.toml
ifrs16kit/.github/workflows/: ci.yml
ifrs16kit/src/ifrs16kit.egg-info/: entry_points.txt  requires.txt  top_level.txt
ifrs16kit/tests/: test_engine.py
src/ifrs16kit/: __init__.py  __main__.py  core.py
src/ifrs16kit.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  selftest.py  test_api.py  test_cli.py  test_excel_recalc.py  test_template.py  test_workbook.py
